# space-mmo

./: .gitignore  AGENTS.md  Vagrantfile  claude.md  gen-documentation.md  prd.md  process-tasks.md  shell.bat  tasks.md
current-cycle/: README.md  code-review-services-refactor.md  gen-env.md  gen-explore.md  gen-plan.md
current-cycle/tasks/: .gitkeep  README.md  explore-control-panel.md  explore-db-models.md  explore-services.md  idea-telemetry.md  plan-enhance-services-testing.md  plan-refactor-db-models-1126-review.md  plan-refactor-db-models-1126.md  plan-refactor-services-to-use-db-models.md
gamedb/: create-db.sh  nginx.conf
gamedb/thrift/: .game.thrift.swp  common.py  compile.py  db.py  db_test.py  game.thrift  inventory.py  inventory_service.py  inventory_service_test.py  inventory_test.py  item_db.py  materialized.json  read.py  run_all_tests.py  test_cache.py
gamedb/thrift/control_panel/: README.md  app.py  test_mobile_endpoints.py
gamedb/thrift/cpp/: CMakeLists.txt  README.md  example_client.cpp  inventory.cpp  inventory.h
gamedb/thrift/fiddler/: README.md  app.py
gamedb/thrift/gen-cpp/: InventoryService.cpp  InventoryService.h  InventoryService_server.skeleton.cpp  game_constants.cpp  game_constants.h  (+2 more)
libs/: TODO.md
libs/common/: types.hpp
libs/i18n/: build.bat  i18n.cpp  i18n.hpp
lsa/: Makefile  lsa
lsa/src/: lsa.c
old-cycle/tasks/: prd-lsa-table-formatter.md  prd-model-relationship-testing.md  prd-pivot-table-relationships.md  prd-thrift-model-conversion.md  tasks-prd-lsa-table-formatter.md  tasks-prd-lsa-ui-ux-refactor.md  tasks-prd-model-relationship-testing.md  tasks-prd-pivot-table-relationships.md  tasks-prd-thrift-model-conversion.md
tasks/: prd-add-model-relationships.md  prd-lsa-ui-ux-refactor.md  tasks-prd-add-model-relationships.md  tasks-prd-pivot-table-relationships.md
(+139 files in other folders)
